# Lucy

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  STRATEGY.txt  lucy.blend
assets/model/: traced_model.pt
meshes/: kachelmuster.off
scripts/plantuml/: pinn_physic_state.puml
scripts/python/: sparkle.py
src/: main.cpp
src/modules/ai_inference/: ModelProcessor.cpp  ModelProcessor.h
src/modules/kamon/: kamon.cpp  kamon.h
src/modules/kamon_fourier/: kamon_fourier.cpp  kamon_fourier.h  kiss_fft.cpp  kiss_fft.h
src/modules/kamon_fourier/components/contourExtractor/: contourExtractor.cpp  contourExtractor.h
src/modules/kamon_fourier/components/visualizer/: visualizer.cpp  visualizer.h
src/modules/logs_report/: logs_report.cpp  logs_report.h
src/modules/mesh/: mesh.cpp  mesh.h
src/modules/mesh/components/loader/: loader.cpp  loader.h
src/modules/tile/: hexagon_tile.cpp  hexagon_tile.h
src/screens/: homepage_screen.cpp  homepage_screen.h  welcome_screen.h
